Sidebar Profile Button Fix (Mobile)!
This will fix the Profile Button misalignment and with that add a Margin between the Notifications button, to separate and give space.

--- a/material.css
+++ b/material.css
@@ -227,15 +227,15 @@ input.Button[type="submit"] {
 }
 
 .SessionDropdown .Dropdown-toggle {
-    border-radius: 18px;
-    margin-left: 15px 
+    border-radius: 2px;
+    margin-top: 9px;
 }
 
 .SessionDropdown .Dropdown-toggle .Avatar {
     margin: 6px 5px -2px -6px;
     width: 24px;
     height: 24px;
-    border-radius: 24px;
+    border-radius: 2px;
     font-size: 12px;
     line-height: 24px; 
 }
